--- a/冯娆/practice/test-output/old/Default suite/classes.html
+++ b/冯娆/practice/test-output/old/Default suite/classes.html
@@ -4,11 +4,19 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>practice.Demo1</td>
+<td>test.Demo1</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>test4</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>test5</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>test2</td>
