--- a/冯娆/practice/test-output/old/Default suite/methods.html
+++ b/冯娆/practice/test-output/old/Default suite/methods.html
@@ -1,14 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a793a8">  <td>19/11/14 20:06:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo1.test1()[pri:0, instance:test.Demo1@34033bd0]">test1</td> 
-  <td>main@796533847</td>   <td></td> </tr>
-<tr bgcolor="a793a8">  <td>19/11/14 20:06:47</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo1.test2()[pri:0, instance:test.Demo1@34033bd0]">test2</td> 
-  <td>main@796533847</td>   <td></td> </tr>
-<tr bgcolor="a793a8">  <td>19/11/14 20:06:47</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo1.test3()[pri:0, instance:test.Demo1@34033bd0]">test3</td> 
-  <td>main@796533847</td>   <td></td> </tr>
-<tr bgcolor="a793a8">  <td>19/11/14 20:06:47</td>   <td>34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo1.test4()[pri:0, instance:test.Demo1@34033bd0]">test4</td> 
-  <td>main@796533847</td>   <td></td> </tr>
-<tr bgcolor="a793a8">  <td>19/11/14 20:06:47</td>   <td>37</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo1.test5()[pri:0, instance:test.Demo1@34033bd0]">test5</td> 
-  <td>main@796533847</td>   <td></td> </tr>
+<tr bgcolor="bc6874">  <td>19/11/27 21:56:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.doBeforeClass()[pri:0, instance:fengrao.Demo2@6833ce2c]">&gt;&gt;doBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@672320506</td>   <td></td> </tr>
+<tr bgcolor="9b8d87">  <td>19/11/27 21:57:10</td>   <td>31399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo2.FindByContent()[pri:0, instance:fengrao.Demo2@6833ce2c]">FindByContent</td> 
+  <td>main@672320506</td>   <td></td> </tr>
+<tr bgcolor="9b8d87">  <td>19/11/27 21:57:18</td>   <td>39054</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo2.FindBytitle1()[pri:0, instance:fengrao.Demo2@6833ce2c]">FindBytitle1</td> 
+  <td>main@672320506</td>   <td></td> </tr>
+<tr bgcolor="9b8d87">  <td>19/11/27 21:57:24</td>   <td>45350</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo2.FindBytitle2()[pri:0, instance:fengrao.Demo2@6833ce2c]">FindBytitle2</td> 
+  <td>main@672320506</td>   <td></td> </tr>
 </table>
