--- a/冯娆/practice/test-output/old/Default suite/classes.html
+++ b/冯娆/practice/test-output/old/Default suite/classes.html
@@ -4,34 +4,30 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>test.Demo1</td>
+<td>fengrao.Demo2</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test4</td>
+<td>FindBytitle2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test5</td>
+<td>FindByContent</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test2</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>test3</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>test1</td>
+<td>FindBytitle1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>doBeforeClass</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
