--- a/冯娆/practice/test-output/old/Default suite/methods.html
+++ b/冯娆/practice/test-output/old/Default suite/methods.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bc6874">  <td>19/11/27 21:56:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.doBeforeClass()[pri:0, instance:fengrao.Demo2@6833ce2c]">&gt;&gt;doBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@672320506</td>   <td></td> </tr>
-<tr bgcolor="9b8d87">  <td>19/11/27 21:57:10</td>   <td>31399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo2.FindByContent()[pri:0, instance:fengrao.Demo2@6833ce2c]">FindByContent</td> 
-  <td>main@672320506</td>   <td></td> </tr>
-<tr bgcolor="9b8d87">  <td>19/11/27 21:57:18</td>   <td>39054</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo2.FindBytitle1()[pri:0, instance:fengrao.Demo2@6833ce2c]">FindBytitle1</td> 
-  <td>main@672320506</td>   <td></td> </tr>
-<tr bgcolor="9b8d87">  <td>19/11/27 21:57:24</td>   <td>45350</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo2.FindBytitle2()[pri:0, instance:fengrao.Demo2@6833ce2c]">FindBytitle2</td> 
-  <td>main@672320506</td>   <td></td> </tr>
+<tr bgcolor="8c82f3">  <td>19/12/03 16:44:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.doBeforeClass()[pri:0, instance:fengrao.Demo1@256216b3]">&gt;&gt;doBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@649734728</td>   <td></td> </tr>
+<tr bgcolor="f5f779">  <td>19/12/03 16:45:14</td>   <td>28753</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Demo1.login()[pri:0, instance:fengrao.Demo1@256216b3]">&gt;&gt;login</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@649734728</td>   <td></td> </tr>
+<tr bgcolor="f5f779">  <td>19/12/03 16:45:46</td>   <td>60865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Demo1.FindPeopleByName1()[pri:0, instance:fengrao.Demo1@256216b3]">FindPeopleByName1</td> 
+  <td>main@649734728</td>   <td></td> </tr>
+<tr bgcolor="8c82f3">  <td>19/12/03 16:45:58</td>   <td>72927</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.doAfterClass()[pri:0, instance:fengrao.Demo1@256216b3]">&lt;&lt;doAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@649734728</td>   <td></td> </tr>
+<tr bgcolor="8c82f3">  <td>19/12/03 16:46:43</td>   <td>118197</td> <td title="&lt;&lt;BaseTest.doAfterMethod()[pri:0, instance:fengrao.Demo1@256216b3]">&lt;&lt;doAfterMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@649734728</td>   <td></td> </tr>
 </table>
